# ecommerce-support-agent

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MULTI_TENANCY.md  Makefile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20250206_0001_initial_schema.py  20260206_1637_initial_schema.py  20260206_1658_add_knowledge_chunks.py  20260207_0045_add_multi_tenancy_models.py
docs/: 00-PROJECT-OVERVIEW.md  01-ARCHITECTURE.md  02-WEEK-BY-WEEK-PLAN.md  03-TECHNICAL-SPEC.md  04-API-SPECIFICATION.md  05-INTEGRATIONS.md  06-TESTING-STRATEGY.md  07-DEPLOYMENT-GUIDE.md  08-METRICS-AND-MONITORING.md  INDEX.md  ONBOARDING.md  RUNBOOK.md
docs/plans/: 2026-02-07-multi-tenant-agent-platform-design.md  phase-1-implementation-plan.md  phase-1-progress.md
scripts/: create_store.py  ingest_website.py  init_db.py  migrate_to_multi_tenant.py  test_agent.py  test_store.py
src/: __init__.py  config.py  database.py
src/agents/: __init__.py  graph.py  prompts.py  state.py
src/api/: main.py  schemas.py
src/integrations/: __init__.py  gorgias.py  knowledge_base.py  shipping.py  shopify.py
src/models/: __init__.py  agent.py  base.py  (+5 more)
tests/: conftest.py
widget/: index.html  package-lock.json  package.json  vite.config.ts
(+33 files in other folders)
